Fix input text color

--- a/app/src/main/res/layout/identity_input_fragment.xml
+++ b/app/src/main/res/layout/identity_input_fragment.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- TODO: Fix style, text color in input is wrong -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/Hedvig.Theme.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/base_margin_triple"
