--- a/app/src/main/res/layout/identity_input_fragment.xml
+++ b/app/src/main/res/layout/identity_input_fragment.xml
@@ -35,10 +35,10 @@
         android:layout_marginHorizontal="@dimen/base_margin_double"
         android:layout_marginBottom="@dimen/base_margin_double"
         android:enabled="false"
-        android:text="@string/simple_sign.sign_in"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:enabled="true" />
+        tools:enabled="true"
+        tools:text="@string/simple_sign.sign_in" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
