--- a/app/src/main/res/layout/view_multi_action_component.xml
+++ b/app/src/main/res/layout/view_multi_action_component.xml
@@ -40,8 +40,9 @@
 
         <FrameLayout
             android:id="@+id/removeButton"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="42dp"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_height="42dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
