Add screens and test

--- a/app/src/main/res/layout/dialog_add_building.xml
+++ b/app/src/main/res/layout/dialog_add_building.xml
@@ -24,6 +24,7 @@
         android:textAppearance="?textAppearanceHeadline5" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/dropdown_menu"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
