--- a/app/src/main/res/layout/activity_my_info.xml
+++ b/app/src/main/res/layout/activity_my_info.xml
@@ -47,6 +47,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@id/emailInputContainer"
+                    style="@style/Hedvig.Theme.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
@@ -65,6 +66,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@id/phoneNumberInputContainer"
+                    style="@style/Hedvig.Theme.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
