--- a/app/src/main/res/layout/dialog_add_building.xml
+++ b/app/src/main/res/layout/dialog_add_building.xml
@@ -24,7 +24,7 @@
         android:textAppearance="?textAppearanceHeadline5" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/dropdown_menu"
+        android:id="@+id/dropdownLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
         app:endIconDrawable="@drawable/ic_expand">
 
         <AutoCompleteTextView
-            android:id="@+id/filled_exposed_dropdown"
+            android:id="@+id/dropdownInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="none"
@@ -45,6 +45,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/numberLayout"
         style="@style/Hedvig.Theme.TextInputLayout.FilledBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -53,7 +54,7 @@
         android:hint="Size">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@id/phoneNumberInput"
+            android:id="@+id/numberInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
@@ -63,6 +64,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/componentSwitch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/base_margin_double"
