Inflate toolbar menu when entering embark view to avoid height change. Add margin top to response view.

--- a/app/src/main/res/layout/number_action_fragment.xml
+++ b/app/src/main/res/layout/number_action_fragment.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_half"
         android:alpha="0"
         android:textAppearance="?textAppearanceSubtitle1"
         android:theme="@style/ThemeOverlay.Hedvig.Embark.Chat.Self"
