--- a/app/src/main/res/layout/fragment_embark_text_action.xml
+++ b/app/src/main/res/layout/fragment_embark_text_action.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_half"
         android:layout_marginEnd="@dimen/base_margin_double"
         android:alpha="0"
         android:textAppearance="?textAppearanceSubtitle1"
@@ -55,8 +56,8 @@
                     android:id="@+id/input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:importantForAutofill="no"
                     android:imeOptions="actionDone"
+                    android:importantForAutofill="no"
                     android:inputType="text" />
 
             </com.google.android.material.textfield.TextInputLayout>
