--- a/app/src/main/res/layout/fragment_text_action_set.xml
+++ b/app/src/main/res/layout/fragment_text_action_set.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_half"
         android:layout_marginEnd="@dimen/base_margin_double"
         android:alpha="0"
         android:maxWidth="@dimen/embark_chat_bubble_max_width"
