--- a/app/src/main/res/layout/previous_insurer_fragment.xml
+++ b/app/src/main/res/layout/previous_insurer_fragment.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_half"
         android:layout_marginEnd="@dimen/base_margin_double"
         android:alpha="0"
         android:textAppearance="?textAppearanceSubtitle1"
