APP-268: Set text color for chat response view to improve contrast in dark mode

--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -137,6 +137,7 @@
     </style>
 
     <style name="ThemeOverlay.Hedvig.Embark.Chat.Self" parent="">
+        <item name="android:textColor">?colorOnPrimary</item>
         <item name="android:background">@drawable/embark_chat_bubble_self_background</item>
         <item name="android:paddingStart">@dimen/base_margin_double</item>
         <item name="android:paddingEnd">@dimen/base_margin_double</item>
