--- a/app/src/main/res/layout/number_action_set_fragment.xml
+++ b/app/src/main/res/layout/number_action_set_fragment.xml
@@ -43,32 +43,11 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
+            android:id="@+id/input_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:padding="@dimen/base_margin_double">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/inputContainer"
-                style="@style/Hedvig.Theme.TextInputLayout.FilledBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:expandedHintEnabled="false"
-                tools:helperText="other people"
-                tools:hint="Co-insured"
-                tools:placeholderText="1">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:imeOptions="actionDone"
-                    android:importantForAutofill="no"
-                    android:inputType="number" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-        </LinearLayout>
+            android:padding="@dimen/base_margin_double" />
 
     </com.google.android.material.card.MaterialCardView>
 
