--- a/app/src/main/res/layout/home_change_address_button.xml
+++ b/app/src/main/res/layout/home_change_address_button.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/change_address_button"
+    android:id="@+id/title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:drawablePadding="@dimen/base_margin_double"
