--- a/app/src/main/res/layout/change_address_button.xml
+++ b/app/src/main/res/layout/change_address_button.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/change_address_button"
-    style="@style/Hedvig.Button.Outlined"
+    style="?materialButtonOutlinedLargeStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="@dimen/base_margin"
