Move logic for list creation to viewmodel. Add pending address change list item.

--- a/app/src/main/res/layout/change_address_pending_change_card.xml
+++ b/app/src/main/res/layout/change_address_pending_change_card.xml
@@ -4,9 +4,8 @@
     android:id="@+id/connectBankAccountCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/base_margin_double"
     android:layout_marginTop="@dimen/base_margin_double"
-    android:layout_marginEnd="@dimen/base_margin_double"
+    android:layout_marginHorizontal="@dimen/base_margin_double"
     android:theme="@style/ThemeOverlay.Hedvig.InfoCard">
 
     <androidx.constraintlayout.widget.ConstraintLayout
