--- a/app/src/main/res/layout/change_address_button.xml
+++ b/app/src/main/res/layout/change_address_button.xml
@@ -5,5 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="@dimen/base_margin"
+    android:layout_marginHorizontal="@dimen/base_margin_double"
     android:padding="@dimen/base_margin_double"
     android:text="@string/home_tab.editing_section_change_address_label" />
