--- a/app/src/main/res/layout/view_multi_action_add.xml
+++ b/app/src/main/res/layout/view_multi_action_add.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="160dp"
     android:layout_height="88dp"
     android:layout_margin="@dimen/base_margin"
@@ -13,12 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/base_margin_triple"
-        android:src="@drawable/ic_add_circle"
-        app:tint="?colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_add_circle"
+        app:tint="?colorPrimary" />
 
     <TextView
         android:id="@+id/title"
@@ -26,12 +25,12 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/base_margin_double"
         android:gravity="center_vertical"
+        android:text="Add building"
         android:textAppearance="?textAppearanceBody2"
         android:textColor="?colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/addButton"
-        android:text="Add building" />
+        app:layout_constraintTop_toBottomOf="@id/addButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
