--- a/app/src/main/res/layout/view_multi_action_component.xml
+++ b/app/src/main/res/layout/view_multi_action_component.xml
@@ -43,6 +43,7 @@
             android:layout_width="42dp"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_height="42dp"
+            android:contentDescription="@null"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
