Align overline styling with design system

--- a/app/src/main/res/values/text_themes.xml
+++ b/app/src/main/res/values/text_themes.xml
@@ -65,4 +65,9 @@
         <item name="android:textColor">?android:textColorTertiary</item>
     </style>
 
+    <style name="Hedvig.TextAppearance.Overline" parent="TextAppearance.MaterialComponents.Overline">
+        <item name="lineHeight">16sp</item>
+        <item name="android:letterSpacing">0.05</item>
+    </style>
+
 </resources>
