--- a/app/src/main/res/layout/embark_input_item.xml
+++ b/app/src/main/res/layout/embark_input_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/textField"
     style="@style/Hedvig.Theme.TextInputLayout.FilledBox"
     android:layout_width="match_parent"
