--- a/app/src/main/res/layout/activity_web_onboarding.xml
+++ b/app/src/main/res/layout/activity_web_onboarding.xml
@@ -17,7 +17,7 @@
             android:id="@+id/openSettings"
             style="@style/ToolbarIcon.Start"
             android:contentDescription="@string/SETTINGS_ACCESSIBILITY_HINT"
-            app:srcCompat="@drawable/ic_settings" />
+            app:srcCompat="@drawable/ic_profile_settings" />
 
         <ImageView
             android:layout_width="wrap_content"
