Make links in embark chat messages clickable

--- a/app/src/main/res/layout/embark_message_item.xml
+++ b/app/src/main/res/layout/embark_message_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginVertical="@dimen/base_margin_half"
     android:maxWidth="@dimen/embark_chat_bubble_max_width"
+    android:autoLink="web"
     android:theme="@style/ThemeOverlay.Hedvig.Embark.Chat.Hedvig"
     android:textAppearance="?textAppearanceSubtitle1"
     tools:text="Hejsan" />
