--- a/app/src/main/res/layout/activity_web_onboarding.xml
+++ b/app/src/main/res/layout/activity_web_onboarding.xml
@@ -40,9 +40,26 @@
 
     </FrameLayout>
 
-    <com.hedvig.app.ui.view.SafeWebView
-        android:id="@+id/webOnboarding"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/loadingIndicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true" />
+
+        <com.hedvig.app.ui.view.SafeWebView
+            android:id="@+id/webOnboarding"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone" />
+
+    </FrameLayout>
+
 
 </LinearLayout>
