--- a/app/src/main/res/layout/view_material_progress_toolbar.xml
+++ b/app/src/main/res/layout/view_material_progress_toolbar.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:parentTag="android.widget.LinearLayout">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
+        app:navigationIcon="@drawable/ic_back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
