--- a/app/src/main/res/layout/view_multi_action_add.xml
+++ b/app/src/main/res/layout/view_multi_action_add.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/base_margin_triple"
+        android:contentDescription="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/base_margin_double"
         android:gravity="center_vertical"
-        android:text="Add building"
+        android:text="@string/embark.multiaction.add_building_button"
         android:textAppearance="?textAppearanceBody2"
         android:textColor="?colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
