--- a/app/src/main/res/layout/dialog_add_building.xml
+++ b/app/src/main/res/layout/dialog_add_building.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bottom_sheet_dialog_no_title_fragment_background"
@@ -23,57 +22,12 @@
         android:text="@string/embark.multiaction.add_building_button"
         android:textAppearance="?textAppearanceHeadline5" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/dropdownLayout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+    <LinearLayout
+        android:id="@+id/component_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/base_margin_double"
         android:layout_marginTop="@dimen/base_margin"
-        android:orientation="horizontal"
-        app:boxBackgroundColor="?colorSurface"
-        app:endIconDrawable="@drawable/ic_expand"
-        tools:hint="Building type">
-
-        <AutoCompleteTextView
-            android:id="@+id/dropdownInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="none"
-            android:textColor="@color/textColorSecondary"
-            tools:ignore="LabelFor" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/numberLayout"
-        style="@style/Hedvig.Theme.TextInputLayout.FilledBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/base_margin_double"
-        android:layout_marginTop="@dimen/base_margin"
-        tools:hint="Size">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/numberInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            tools:hint="Size"
-            tools:text="12" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/componentSwitch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/base_margin_double"
-        android:layout_marginTop="@dimen/base_margin"
-        android:focusable="false"
-        android:padding="@dimen/base_margin"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-        tools:text="Water" />
+        android:orientation="vertical" />
 
     <Button
         android:id="@+id/continueButton"
