Fix PR comments

--- a/app/src/main/res/layout/activity_offer.xml
+++ b/app/src/main/res/layout/activity_offer.xml
@@ -18,24 +18,23 @@
         tools:listitem="@layout/offer_header"
         tools:paddingTop="?attr/actionBarSize" />
 
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/offerToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:menu="@menu/offer_menu"
         app:navigationIcon="@drawable/ic_back"
         tools:layout_height="?attr/actionBarSize">
 
-        <TextView
+        <ImageView
             android:id="@+id/toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/APP_NAME"
-            android:textColor="@color/black"
-            android:textSize="26sp"
-            app:titleTextAppearance="@style/Hedvig.TextAppearance.Subtitle1" />
+            android:src="@drawable/ic_hedvig_wordmark"
+            android:contentDescription="@null" />
 
-    </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.MaterialToolbar>
 
 </FrameLayout>
 
