--- a/app/src/main/res/layout/change_address_activity.xml
+++ b/app/src/main/res/layout/change_address_activity.xml
@@ -67,13 +67,13 @@
                 tools:text="You’ll get a few question about your new place to calculate your new price and coverage."
                 tools:visibility="visible" />
 
-            <include
+            <LinearLayout
                 android:id="@+id/upcoming_address_layout"
-                layout="@layout/upcoming_address_change_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/base_margin_double"
                 android:visibility="gone"
+                android:orientation="vertical"
+                android:layout_marginTop="@dimen/base_margin_double"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/subtitle" />
