Change text color for pending address change card

--- a/app/src/main/res/layout/change_address_pending_change_card.xml
+++ b/app/src/main/res/layout/change_address_pending_change_card.xml
@@ -61,6 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/base_margin_double"
             android:text="@string/insurance_details.address_update_button"
+            android:textColor="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/separator" />
