--- a/app/src/main/res/layout/layout_component_switch.xml
+++ b/app/src/main/res/layout/layout_component_switch.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.SwitchCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.switchmaterial.SwitchMaterial xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/componentSwitch"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/base_margin_double"
     android:layout_marginTop="@dimen/base_margin_double"
-    android:focusable="false"
     android:padding="@dimen/base_margin"
-    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+    android:focusable="false"
+    android:textAppearance="?textAppearanceSubtitle1"
     tools:text="Water" />
