--- a/app/src/main/res/layout/list_text_item.xml
+++ b/app/src/main/res/layout/list_text_item.xml
@@ -11,7 +11,7 @@
         android:id="@+id/label"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/Hedvig.TextAppearance.Subtitle1"
+        android:textAppearance="?textAppearanceBody1"
         app:layout_constraintEnd_toStartOf="@id/value"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,7 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="end"
-        android:textAppearance="@style/Hedvig.TextAppearance.Body1"
+        android:textAppearance="?textAppearanceBody1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label"
         app:layout_constraintTop_toTopOf="parent"
