--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <style name="Hedvig.Theme" parent="Hedvig.Theme.V23" />
@@ -154,5 +155,4 @@
         <item name="android:clipToPadding">false</item>
         <item name="android:paddingTop">12dp</item>
     </style>
-
 </resources>
