--- a/app/src/main/res/layout/your_info_home.xml
+++ b/app/src/main/res/layout/your_info_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -15,7 +14,7 @@
         android:text="@string/CONTRACT_DETAIL_HOME_TITLE"
         android:textAppearance="?textAppearanceHeadline6" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/base_margin_double"
@@ -23,30 +22,25 @@
 
         <TextView
             android:id="@+id/coinsured_label"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/base_margin"
+            android:maxWidth="190dp"
             android:text="@string/CONTRACT_DETAIL_HOME_ADDRESS"
-            android:textAppearance="?textAppearanceSubtitle1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/address_value"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textAppearance="?textAppearanceSubtitle1" />
 
         <TextView
             android:id="@+id/address_value"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
             android:textAlignment="textEnd"
             android:textAppearance="?textAppearanceBody1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/coinsured_label"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="1" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/base_margin_double"
@@ -54,30 +48,25 @@
 
         <TextView
             android:id="@+id/postcode_label"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/base_margin"
+            android:maxWidth="190dp"
             android:text="@string/CONTRACT_DETAIL_HOME_POSTCODE"
-            android:textAppearance="?textAppearanceSubtitle1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/postcode_value"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textAppearance="?textAppearanceSubtitle1" />
 
         <TextView
             android:id="@+id/postcode_value"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
             android:textAlignment="textEnd"
             android:textAppearance="?textAppearanceBody1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/postcode_label"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="1" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/base_margin_double"
@@ -85,30 +74,25 @@
 
         <TextView
             android:id="@+id/type_label"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/base_margin"
+            android:maxWidth="190dp"
             android:text="@string/CONTRACT_DETAIL_HOME_TYPE"
-            android:textAppearance="?textAppearanceSubtitle1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/type_value"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textAppearance="?textAppearanceSubtitle1" />
 
         <TextView
             android:id="@+id/type_value"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
             android:textAlignment="textEnd"
             android:textAppearance="?textAppearanceBody1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/type_label"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="1" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/base_margin_double"
@@ -116,27 +100,22 @@
 
         <TextView
             android:id="@+id/size_label"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/base_margin"
+            android:maxWidth="190dp"
             android:text="@string/CONTRACT_DETAIL_HOME_SIZE"
-            android:textAppearance="?textAppearanceSubtitle1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/size_value"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textAppearance="?textAppearanceSubtitle1" />
 
         <TextView
             android:id="@+id/size_value"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
             android:textAlignment="textEnd"
             android:textAppearance="?textAppearanceBody1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/size_label"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="1" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </LinearLayout>
