--- a/app/src/main/res/layout/upcoming_address_change_layout.xml
+++ b/app/src/main/res/layout/upcoming_address_change_layout.xml
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toBottomOf="@id/address_change_title" />
 
     <TextView
-        android:id="@+id/address_label"
+        android:id="@+id/coinsured_label"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/base_margin_triple"
@@ -50,7 +50,7 @@
         android:textAppearance="?textAppearanceBody1"
         android:textColor="?android:textColorPrimary"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/address_label" />
+        app:layout_constraintTop_toBottomOf="@id/coinsured_label" />
 
     <TextView
         android:id="@+id/postal_code_label"
@@ -61,7 +61,7 @@
         android:textAppearance="?textAppearanceBody1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/address_title"
-        app:layout_constraintTop_toBottomOf="@id/address_label"
+        app:layout_constraintTop_toBottomOf="@id/coinsured_label"
         tools:text="113 89" />
 
     <TextView
