--- a/app/src/main/res/layout/your_info_coinsured.xml
+++ b/app/src/main/res/layout/your_info_coinsured.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin_quintuple"
