--- a/app/src/main/res/layout/your_info_home.xml
+++ b/app/src/main/res/layout/your_info_home.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin_quintuple"
