--- a/app/src/main/res/layout/list_text_item_two_line.xml
+++ b/app/src/main/res/layout/list_text_item_two_line.xml
@@ -4,30 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="@dimen/base_margin_double"
-    android:paddingBottom="@dimen/base_margin_double">
+    android:layout_marginHorizontal="@dimen/base_margin_double"
+    android:layout_marginVertical="@dimen/base_margin_and_a_half">
 
     <TextView
         android:id="@+id/label"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textAppearance="?textAppearanceSubtitle1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/content"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Utstyrene dine er forsikrat till" />
+        tools:text="Address" />
 
     <TextView
-        android:id="@+id/content"
+        android:id="@+id/value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="textEnd"
         android:textAppearance="?textAppearanceBody1"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/label"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="1 000 000 kr" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/label"
+        tools:text="Askergatan 112 B" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
