Add missing color resource and remove unused import

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,6 +32,7 @@
     <color name="hedvig_off_black">#1b1b1b</color>
 
     <color name="lavender_100">#F4EEFD</color>
+    <color name="lavender_200">#E7D6FF</color>
     <color name="lavender_300">#C9ABF5</color>
     <color name="lavender_400">#BE9BF3</color>
     <color name="lavender_600">#875EC5</color>
