--- a/app/src/main/res/layout/number_action_set_fragment.xml
+++ b/app/src/main/res/layout/number_action_set_fragment.xml
@@ -16,18 +16,12 @@
         tools:itemCount="3"
         tools:listitem="@layout/embark_message_item" />
 
-    <TextView
-        android:id="@+id/response"
+    <include
+        android:id="@+id/responseContainer"
+        layout="@layout/embark_response"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_double"
-        android:layout_marginTop="@dimen/base_margin_half"
-        android:alpha="0"
-        android:textAppearance="?textAppearanceSubtitle1"
-        android:theme="@style/ThemeOverlay.Hedvig.Embark.Chat.Self"
-        android:translationY="100dp"
-        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/messages" />
 
