--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,6 +43,8 @@
 
     <color name="text_color_primary_light">#AB121212</color>
 
+    <color name="separator_light">#4A3C3C43</color>
+
     <item name="blur_summer_sky" type="color">#efeac6</item>
     <item name="blur_fall_sunset" type="color">#e2ccce</item>
     <item name="blur_spring_fog" type="color">#f8b992</item>
